--- a/Views/ServiceAdvisor/Create.cshtml
+++ b/Views/ServiceAdvisor/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Client
+﻿@*@model Domain.Service
 
 @{
     ViewData["Title"] = "Create";
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 <h4>Client</h4>
-
+<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Add New Customer">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
@@ -28,7 +28,7 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             @Html.HiddenFor(model => model.applicationUserId)
-            @Html.HiddenFor(model => model.Id);
+           
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -42,5 +42,4 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
-
+}*@
