--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model Domain.Service
+﻿@model Domain.Client
 
 @{
     ViewData["Title"] = "Create";
@@ -6,11 +6,11 @@
 
 <h2>Create</h2>
 
-<h4>Client</h4>
+<h4>New Employee</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Add New Customer">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
@@ -28,7 +28,7 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             @Html.HiddenFor(model => model.applicationUserId)
-           
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -42,4 +42,4 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}*@
+}
