--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -24,7 +24,7 @@
     }
     else 
     {
-        Layout = "~/Views/Shared/_LayoutCustomer.cshtml";
+        Layout = "~/Views/Shared/_Layout.cshtml";
     }
 }
   
