--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model Domain.Client
-
+﻿@model serviceAssistants.Models.EmployeeViewModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -7,27 +6,37 @@
 <h2>Create</h2>
 
 <h4>New Employee</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="Employee.FirstName" class="control-label"></label>
+                <input asp-for="Employee.FirstName" class="form-control" />
+                <span asp-validation-for="Employee.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="Employee.EmployeeNumber" class="control-label"></label>
+                <input asp-for="Employee.EmployeeNumber" class="form-control" />
+                <span asp-validation-for="Employee.EmployeeNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                <label asp-for="Employee.Email" class="control-label"></label>
+                <input asp-for="Employee.Email" class="form-control" />
+                <span asp-validation-for="Employee.Email" class="text-danger"></span>
             </div>
-            @Html.HiddenFor(model => model.applicationUserId)
+            <div class="form-group">
+                <label asp-for="Employee.PhoneNumber" class="control-label"></label>
+                <input asp-for="Employee.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Employee.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <select asp-for="Employee.EmployeeRole"
+                        asp-items="@(new SelectList(ViewBag.Roles))">
+                    <option>Please select one</option>
+                </select>
+            </div>
+            @*@Html.HiddenFor(model => model.Employee.applicationUserId)*@
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
