--- a/Views/Employee/Delete.cshtml
+++ b/Views/Employee/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Client
+﻿@model Domain.Employee
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Client</h4>
+    <h4>Employeee</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
