--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Domain.Client>
+﻿@model IEnumerable<Domain.Employee>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Employees</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -22,9 +22,11 @@
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ApplicationUser)
+                @Html.DisplayNameFor(model => model.EmployeeNumber)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model =>model.EmployeeRole)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -40,7 +42,10 @@
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ApplicationUser.Id)
+                @Html.DisplayFor(modelItem => item.EmployeeNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeRole)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
