--- a/Views/Shared/_LayoutManager.cshtml
+++ b/Views/Shared/_LayoutManager.cshtml
@@ -30,9 +30,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="ServiceAdvisor" asp-action="Create">New Advisor</a></li>
-                    <li><a asp-area="" asp-controller="Tech" asp-action="Create">New Tech</a></li>
-                    <li><a asp-area="" asp-controller="Parts" asp-action="Create">New Parts Employee</a></li>
+                    <li><a asp-area="" asp-controller="Employee" asp-action="Index">All Employees</a></li>
                     <li><a asp-area="" asp-controller="Client" asp-action="Index">All Clients</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
