added ability to create quotes for vehicles

--- a/Views/Vehicle/Details.cshtml
+++ b/Views/Vehicle/Details.cshtml
@@ -43,6 +43,8 @@
     </dl>
 </div>
 <div>
+    <a href="/quote/create/@Model.Id">Create Quote</a> |
+    <a href="/History/Index/@Model.Id">Vehicle History</a> |
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
