--- a/Views/Quote/Create.cshtml
+++ b/Views/Quote/Create.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="hidden">
                 <label asp-for="TechId" class="control-label"></label>
                 <input asp-for="TechId" class="form-control" />
                 <span asp-validation-for="TechId" class="text-danger"></span>
@@ -30,6 +30,7 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
+            @Html.HiddenFor(model => model.VehicleId)
         </form>
     </div>
 </div>
