--- a/Views/Quote/Details.cshtml
+++ b/Views/Quote/Details.cshtml
@@ -23,6 +23,12 @@
             @Html.DisplayFor(model => model.DateTime)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Service)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Service)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.RepairCost)
         </dt>
         <dd>
