--- a/Views/Client/Create.cshtml
+++ b/Views/Client/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
-
-<h4>Client</h4>
+<h2>New Customer</h2>
 
 <div class="row">
     <div class="col-md-4">
