--- a/Views/Client/Delete.cshtml
+++ b/Views/Client/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Customer</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Client</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -28,12 +28,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.Id)
         </dd>
     </dl>
     
