--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -1,44 +1,42 @@
-﻿@model serviceAssistants.Models.EmployeeViewModel
+﻿@model Domain.Employee
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Employee</h2>
 
-<h4>Employee</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Employee.Email" class="control-label"></label>
-                <input asp-for="Employee.Email" class="form-control" />
-                <span asp-validation-for="Employee.Email" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Employee.PhoneNumber" class="control-label"></label>
-                <input asp-for="Employee.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Employee.PhoneNumber" class="text-danger"></span>
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Employee.FirstName" class="control-label"></label>
-                <input asp-for="Employee.FirstName" class="form-control" />
-                <span asp-validation-for="Employee.FirstName" class="text-danger"></span>
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Employee.EmployeeNumber" class="control-label"></label>
-                <input asp-for="Employee.EmployeeNumber" class="form-control" />
-                <span asp-validation-for="Employee.EmployeeNumber" class="text-danger"></span>
+                <label asp-for="EmployeeNumber" class="control-label"></label>
+                <input asp-for="EmployeeNumber" class="form-control" />
+                <span asp-validation-for="EmployeeNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <select asp-for="Employee.EmployeeRole"
+                <select asp-for="EmployeeRole"
                         asp-items="@(new SelectList(ViewBag.Roles))">
                     <option>Please select one</option>
                 </select>
             </div>
-            @Html.HiddenFor(Model => Model.Employee.Id)
+            @Html.HiddenFor(Model => Model.Id)
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
