--- a/Views/Quote/Create.cshtml
+++ b/Views/Quote/Create.cshtml
@@ -9,10 +9,10 @@
 <h4>Quote</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="hidden">
+            <div class="form-group">
                 <label asp-for="TechId" class="control-label"></label>
                 <input asp-for="TechId" class="form-control" />
                 <span asp-validation-for="TechId" class="text-danger"></span>
@@ -27,10 +27,12 @@
                 <input asp-for="RepairCost" class="form-control" />
                 <span asp-validation-for="RepairCost" class="text-danger"></span>
             </div>
+            <div>
+            @Html.HiddenFor(model=>model.VehicleId)
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
-            @Html.HiddenFor(model => model.VehicleId)
         </form>
     </div>
 </div>
