--- a/Views/Quote/Edit.cshtml
+++ b/Views/Quote/Edit.cshtml
@@ -14,20 +14,26 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="TechId" class="control-label"></label>
+                <label asp-for="TechId" class="control-label"style="color:black; background-color:darkgray"></label>
                 <input asp-for="TechId" class="form-control" />
                 <span asp-validation-for="TechId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateTime" class="control-label"></label>
+                <label asp-for="DateTime" class="control-label"style="color:black; background-color:darkgray"></label>
                 <input asp-for="DateTime" class="form-control" />
                 <span asp-validation-for="DateTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RepairCost" class="control-label"></label>
+                <label asp-for="RepairCost" class="control-label"style="color:black; background-color:darkgray"></label>
                 <input asp-for="RepairCost" class="form-control" />
                 <span asp-validation-for="RepairCost" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="IsComplete" class="control-label"style="color:black; background-color:darkgray"></label>
+                <input asp-for="IsComplete" class="form-control" />
+                <span asp-validation-for="IsComplete" class="text-danger"></span>
+            </div>
+            @Html.HiddenFor(model => model.VehicleId)
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
