--- a/Views/Shared/_LayoutCustomer.cshtml
+++ b/Views/Shared/_LayoutCustomer.cshtml
@@ -37,7 +37,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Client" asp-action="Edit">Edit Profile</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Vehicle" asp-action="Index">My Vehicles</a></li>
+                    <li><a asp-area="" asp-controller="Client" asp-action="Details">Set Appointment</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
