--- a/Views/Shared/_LayoutManager.cshtml
+++ b/Views/Shared/_LayoutManager.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,7 +32,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Employee" asp-action="Index">All Employees</a></li>
-                    <li><a asp-area="" asp-controller="Client" asp-action="Index">All Clients</a></li>
+                    <li><a asp-area="" asp-controller="Client" asp-action="Index">All Customers</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
