--- a/Views/Vehicle/Create.cshtml
+++ b/Views/Vehicle/Create.cshtml
@@ -32,8 +32,12 @@
                 <input asp-for="Vehicle.Vin" class="form-control" />
                 <span asp-validation-for="Vehicle.Vin" class="text-danger"></span>
             </div>
-            @Html.HiddenFor(model=>model.Vehicle.ClientId)
-            @Html.HiddenFor(model=>model.Client.Id)
+            <div class="form-group">
+                <label asp-for="Vehicle.ClientId" class="control-label"></label>
+                <input asp-for="Vehicle.ClientId" class="form-control" />
+                <span asp-validation-for="Vehicle.ClientId" class="text-danger"></span>
+            </div>
+            @Html.HiddenFor(model => model.Client.Id)
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
